add link to ARM ISO

--- a/fai-cd/index.html
+++ b/fai-cd/index.html
@@ -144,7 +144,24 @@ dd if=faicd64-large_6.2.5.iso of=/dev/sdx
           </div>
         </div>
 
+
+
+
         <div class="row">
+          <h5 class="col s12">FAI CD for ARM64</h5>
+          <div class="col s12 m10 valign-wrapper">
+            <div class="col m5 s12 valign">
+              <a href="fai-small_6.2.5-arm64.iso" class="waves-effect waves-light btn fai-btn black-text">
+                <i class="material-icons left">download</i>FAI ISO small for arm64 (894MB)</a>
+            </div>
+
+            <p class="col m7 s12">
+              FAI ISO small for arm64, FAI 6.2.5, kernel 6.11.10+bpo-arm64-16k from bookworm/backports
+            </p>
+          </div>
+
+
+          <div class="row">
           <div class="col s12">
             <h5>Debian Live ISO created by FAI</h5>
 
