--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
             <h5>News</h5>
 
 <ul class="col s12 browser-default">
-<li>[Jan 11, 2025] <a href="/fai-cd/">New ISO images</a> availabe using FAI 6.2.5</li>
+<li>[Jan 20, 2025] <a href="/fai-cd/">First FAI ISO for arm64</a> available using FAI 6.2.5 and kernel 6.11</li>
+<li>[Jan 11, 2025] <a href="/fai-cd/">New ISO images</a> available using FAI 6.2.5</li>
 <li>[Dec 21, 2024] <a href="https://blog.fai-project.org/posts/25-years-of-fai/">Happy 25th birthday FAI!</a></li>
 <li>[Aug, 17, 2024] The FAIme web service now supports Debian live
   images, <a href="https://debconf24.debconf.org/talks/136-a-web-service-for-building-your-own-customized-debian-live-image/">presentation</a>
