--- a/references/index.html
+++ b/references/index.html
@@ -149,8 +149,7 @@
 
         <p>
           There are
-          <a href="/reports">more user references</a>
-          with links to companies and organisations.
+          more user references with <a href="/reports">detailed reports</a> of companies and organisations.
         </p>
       </div>
     </main>
