--- a/FAIme-ubuntu/index.html
+++ b/FAIme-ubuntu/index.html
@@ -39,8 +39,8 @@
 	<!-- Top text -->
 	<div class="row">
 	  <div class="col s12">
-	    <h5>
-	      FAI.me. Build your own <b>installation ISO for Ubuntu 24.04</b>
+	    <h5 style="text-align: center; line-height: 200%">
+	      FAI.me. Build your own </br> <b>Installation ISO for Ubuntu 24.04</b>
             <!--#include virtual="bug.html" -->
 
 	      <!--#include virtual="select-menu.html" -->
