add <p> so plugin edit with emacs will work here

--- a/FAIme/key-distr-desk-pkgs.html
+++ b/FAIme/key-distr-desk-pkgs.html
@@ -82,7 +82,7 @@
 		Add packages to be installed
 	      </p>
 	      <div class="col s12 m6 input-field">
-		<textarea name="addpkgs" class="materialize-textarea"></textarea>
+		<textarea name="addpkgs" class="materialize-textarea"></textarea><p>
 		<span class="helper-text">Separate with spaces, multiple names on one line are fine</span>
               </div>
 	      <p class="col s12 m4">
