--- a/FAIme-ubuntu/key-distr-desk-pkgs.html
+++ b/FAIme-ubuntu/key-distr-desk-pkgs.html
@@ -1,4 +1,3 @@
-
 	    <!-- Distribution Select -->
 	    <div class="col s12 m10">
 	      <p class="col s12 m4">
@@ -38,12 +37,12 @@
 	      </p>
 	      <ul class="col s12 m6">
 		<li>
-		    <input type="checkbox" class="fai" id="cl2" name="cl2" value="DEBIAN_DEVEL">
-		    <label for="cl2">Debian developer tools</label>
+                 <input type="checkbox" class="fai" id="cl2" name="cl2" value="DEBIAN_DEVEL"/>
+                  <label for="cl2">Debian developer tools</label>
 		</li>
 		<li>
-		    <input type="checkbox" class="fai" id="cl3" name="cl3" value="WEBSERVER">
-		    <label for="cl3">Web server</label>
+                 <input type="checkbox" class="fai" id="cl3" name="cl3" value="WEBSERVER"/>
+                  <label for="cl3">Web server</label>
 		</li>
                 <!--
 		    <li>
@@ -54,11 +53,11 @@
 		    </li>
                     -->
 		<li>
-		    <input type="checkbox" class="fai" id="cl5" name="cl5" value="SSH_SERVER" checked="checked">
-		    <label for="cl5">Openssh server</label>
+		    <input type="checkbox" class="fai" id="cl5" name="cl5" value="SSH_SERVER" checked="checked"/>
+                  <label for="cl5">Openssh server</label>
 		</li>
 		<li>
-		    <input type="checkbox" class="fai" id="cl6" name="cl6" value="STANDARD" checked="checked">
+		    <input type="checkbox" class="fai" id="cl6" name="cl6" value="STANDARD" checked="checked"/>
 		    <label for="cl6">Standard system tools</label>
 		</li>
 	      </ul>
@@ -70,7 +69,7 @@
 		Add packages to be installed
 	      </p>
 	      <div class="col s12 m6 input-field">
-		<textarea name="addpkgs" class="materialize-textarea"></textarea>
+		<textarea name="addpkgs" class="materialize-textarea"></textarea><p>
 		<span class="helper-text">Separate with spaces, multiple names on one line are fine</span>
               </div>
 	      <p class="col s12 m4">
