--- a/fai-cd/index.html
+++ b/fai-cd/index.html
@@ -160,16 +160,19 @@ dd if=faicd64-large_6.2.5.iso of=/dev/sdx
             </p>
           </div>
 
+       <div class="row">
+          <h5 class="col s12">Live ISO</h5>
+          <div class="col s12 m10 valign-wrapper">
+            <div class="col m5 s12 valign">
+              <a href="debian12-live-xfce.iso" class="waves-effect waves-light btn fai-btn black-text">
+                <i class="material-icons left">download</i>Debian 12 live ISO, kernel 6.12 (1.5GB)</a> </a>
+       </div>
 
-          <div class="row">
-          <div class="col s12">
-            <h5>Debian Live ISO created by FAI</h5>
-
-            <a href="debian12-live-xfce.iso">Live CD</a>
-            using Debian 12 (bookworm) ,
+            <p class="col m7 s12">
+            Debian 12 Live ISO created by FAIme using a backports kernel,
             <a href="https://wiki.fai-project.org/index.php/Use_nfsroot_for_diskless_clients">documentation</a>
+            </p>
           </div>
-        </div>
 
 <!--         <div class="row">
           <div class="col s12">
