add SEAPATH, remove outdated ufbi, reorder items

--- a/otherdocs/index.html
+++ b/otherdocs/index.html
@@ -27,7 +27,7 @@
 
 <ul class="col s12 browser-default">
 
-<li> <a href="https://github.com/berzdev/ansible-fai">https://github.com/berzdev/ansible-fai</a>
+<li> <a href="https://codeberg.org/berzdev/ansible-fai">https://codeberg.org/berzdev/ansible-fai</a>
 is a set of ansible roles for a multi location environment.
 
 <li> <a href="https://wiki.debian.org/DebianLAN">Debian Local Area
@@ -37,6 +37,15 @@ management.
 
 <li> <a href="https://wiki.debian.org/DebianEdu">DebianEdu</a> is
 using FAI for installing the clients
+
+<li> <a href="https://iankelling.org/git/?p=automated-distro-installer">Multi-boot/distro btrfs provisioning</a>
+
+<li> LF Energy SEAPATH is an open source software hypervisor designed for IEC61850 Digital Substation Automation Systems
+  <a href="https://github.com/seapath">https://github.com/seapath</a>
+
+<li> <a href="http://www.webfai.de/">WebFAI</a> is a tool for
+installing computers back to their delivery environment.
+It supports openSUSE, Ubuntu  and their Tuxedo_OS.
 
 <li>
 <a
@@ -54,9 +63,6 @@ Web-frontend</a> to fai-monitor
 <li> <a href="http://www.openqrm.org">OpenQrm</a> has a FAI plugin for
 cloud deployments
 
-<li> <a href="http://www.webfai.de/">WebFAI</a> is a tool for
-installing computers back to their delivery environment.
-It supports openSUSE, Ubuntu  and their Tuxedo_OS.
 
 <li> <a href="https://qlustar.com/">Qlustar</a> is a HPC Linux OS
 based on Ubuntu using FAI as installer for the master node
@@ -67,9 +73,7 @@ databases. This project is stalled.
 <li><a href="https://www.fusiondirectory.org/">FusionDirectory</a> a
 fork of GOsa which is actively maintained.
 
-<li> <a href="https://iankelling.org/git/?p=automated-distro-installer">Multi-boot/distro btrfs provisioning</a>
 
-<li> <a href="https://www.matteoguglielmi.net/ufbi/">Unattended First Boot Install</a>
 
 </ul>
 
