--- a/FAIme/key-distr-desk-pkgs2.html
+++ b/FAIme/key-distr-desk-pkgs2.html
@@ -14,7 +14,7 @@
 		</div>
 
                 <p>  <input type="checkbox" class="fai" id="cl1" name="cl1" value="BACKPORTS"/>
-                  <label for="cl1">Enable backports including newer kernel</label> </p>
+                  <label for="cl1">Enable backports repository including newer kernel</label> </p>
 	      </div>
 	    </div>
 
