--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 
         <div class="row valign-wrapper">
           <div class="col s7 m8">
+            <!--#include virtual="FAIme/bug.html" -->
             <h4>About FAI</h4>
             <p>FAI is a tool for unattended mass deployment of Linux. It's a system to install and configure Linux systems and software packages on computers as well as virtual machines, from small labs to large-scale infrastructures like clusters and cloud
               environments. You can take one or more virgin PC's, turn on the power, and after a few minutes, the systems are installed, and completely configured to your exact needs, without any interaction necessary.
@@ -56,6 +57,7 @@
             <h5>News</h5>
 
 <ul class="col s12 browser-default">
+<li>[Mar 25, 2025] FAI 6.3 <a href="https://lists.uni-koeln.de/pipermail/linux-fai/2025-March/013341.html">released</a></li>
 <li>[Jan 20, 2025] <a href="/fai-cd/">First FAI ISO for arm64</a> available using FAI 6.2.5 and kernel 6.11</li>
 <li>[Jan 11, 2025] <a href="/fai-cd/">New ISO images</a> available using FAI 6.2.5</li>
 <li>[Dec 21, 2024] <a href="https://blog.fai-project.org/posts/25-years-of-fai/">Happy 25th birthday FAI!</a></li>
@@ -63,7 +65,6 @@
   images, <a href="https://debconf24.debconf.org/talks/136-a-web-service-for-building-your-own-customized-debian-live-image/">presentation</a>
   at DebConf24</li>
 <li>[June 20, 2024] The FAIme service provides customized installation media using Debian 13 (testing aka Trixie) and Ubuntu 24.04</li>
-<li>[Jan 21, 2024] FAI 6.2 <a href="https://lists.uni-koeln.de/pipermail/linux-fai/2024-January/013148.html">released</a></li>
 </ul>
           </div>
         </div>
