--- a/FAIme/language.html
+++ b/FAIme/language.html
@@ -11,6 +11,7 @@
                   <option value="fi">Finnish / Suomi</option>
 		  <option value="fr">French / Français</option>
 		  <option value="de">German / Deutsch</option>
+		  <option value="it">Italian / /Italiano</option>
 		  <option value="pl">Polish / Polski</option>
 		  <option value="br">Portuguese BR / Português</option>
 		  <option value="pt">Portuguese PT / Português</option>
