--- a/fai-cd/index.html
+++ b/fai-cd/index.html
@@ -24,19 +24,20 @@
 
           <div class="col s12 m10 valign-wrapper">
             <div class="col m5 s12 valign">
-              <a href="faicd64-large_6.2.5.iso" class="waves-effect waves-light btn fai-btn black-text">
-                <i class="material-icons left">download</i>FAI ISO large (1.9GB)</a>
+              <a href="faicd64-large_6.4.iso" class="waves-effect waves-light btn fai-btn black-text">
+                <i class="material-icons left">download</i>FAI ISO large (2.2GB)</a>
             </div>
             <p class="col m7 s12">
               The default image. Includes all packages for the XFCE
-              and GNOME desktop but only the basefiles for Rocky Linux 9 and Ubuntu 22.04
+              and GNOME desktop but only the basefiles for Rocky Linux
+              9, Alma Linux 9, Ubuntu 24.04 and Linux Mint 22.1
             </p>
           </div>
 
           <div class="col s12 m10 valign-wrapper">
             <div class="col m5 s12 valign">
-              <a href="faicd64-small_6.2.5.iso" class="waves-effect waves-light btn fai-btn black-text">
-                <i class="material-icons left">download</i>FAI ISO small (865MB)</a>
+              <a href="faicd64-small_6.4.iso" class="waves-effect waves-light btn fai-btn black-text">
+                <i class="material-icons left">download</i>FAI ISO small (868MB)</a>
             </div>
             <p class="col m7 s12">
               Includes packages for a stripped down XFCE desktop (without libreoffice). Other packages and basefiles are downloaded from the internet.
@@ -45,7 +46,7 @@
 
           <div class="col s12 m10 valign-wrapper">
             <div class="col m5 s12 valign">
-              <a href="faicd64-ubuntu-only_6.2.5.iso" class="waves-effect waves-light btn fai-btn black-text">
+              <a href="faicd64-ubuntu-only_6.4.iso" class="waves-effect waves-light btn fai-btn black-text">
                 <i class="material-icons left">download</i>FAI ISO Ubuntu (2.0GB)</a>
             </div>
             <p class="col m7 s12">
@@ -56,8 +57,18 @@
 
           <div class="col s12 m10 valign-wrapper">
             <div class="col m5 s12 valign">
-              <a href="faicd64-autodiscover_6.2.5.iso" class="waves-effect waves-light btn fai-btn black-text">
-                <i class="material-icons left">download</i>Autodiscover CD (59MB)</a>
+              <a href="faicd64-linuxmint-only_6.4.iso" class="waves-effect waves-light btn fai-btn black-text">
+                <i class="material-icons left">download</i>FAI ISO Linux Mint (2.8GB)</a>
+            </div>
+            <p class="col m7 s12">
+              This image only installs Linux Mint 22.1. All packages are included on the ISO.
+            </p>
+          </div>
+
+          <div class="col s12 m10 valign-wrapper">
+            <div class="col m5 s12 valign">
+              <a href="faicd64-autodiscover_6.4.iso" class="waves-effect waves-light btn fai-btn black-text">
+                <i class="material-icons left">download</i>Autodiscover CD (61MB)</a>
             </div>
             <p class="col m7 s12">
               Boot only image which autodiscovers the FAI server.
@@ -65,7 +76,7 @@
           </div>
 
           <p class="col s12">
-            All installation images use Debian 12 aka bookworm, FAI 6.2.5, kernel 6.1, amd64 architecture,
+            All installation images use Debian 12 aka bookworm, FAI 6.4, kernel 6.1, amd64 architecture,
             <a href="sha256sums.asc">sha256sum.asc</a>
             of the ISO's. They can boot from CD/DVD or USB stick with legacy BIOS or UEFI.
           </p>
@@ -84,7 +95,7 @@
             You can write the ISO image onto a USB stick using the command dd(1) and replace /dev/sdX with the name of your USB device (e.g. /dev/sdf):
 
 <pre><code>
-dd if=faicd64-large_6.2.5.iso of=/dev/sdx
+dd if=faicd64-large_6.4.iso of=/dev/sdx
 </code></pre>
 
           </div>
