--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           </div>
           <div class="col s4">
 
-            <a class="waves-effect waves-light fai-btn btn-large valign right black-text z-depth-3" style="font-size: 170%" href="/fai-cd/faicd64-large_6.2.5.iso">
+            <a class="waves-effect waves-light fai-btn btn-large valign right black-text z-depth-3" style="font-size: 170%" href="/fai-cd/faicd64-large_6.4.iso">
               <i class="material-icons left">download</i>ISO (1.9GB)</a>
           </div>
 
@@ -57,9 +57,9 @@
             <h5>News</h5>
 
 <ul class="col s12 browser-default">
-<li>[Mar 25, 2025] FAI 6.3 <a href="https://lists.uni-koeln.de/pipermail/linux-fai/2025-March/013341.html">released</a></li>
+<li>[Apr 22, 2025] New release <a href="https://lists.uni-koeln.de/pipermail/linux-fai/2025-April/013352.html">FAI 6.4 </a>
+and <a href="/fai-cd/">new ISO images</a> available using FAI 6.4</li>
 <li>[Jan 20, 2025] <a href="/fai-cd/">First FAI ISO for arm64</a> available using FAI 6.2.5 and kernel 6.11</li>
-<li>[Jan 11, 2025] <a href="/fai-cd/">New ISO images</a> available using FAI 6.2.5</li>
 <li>[Dec 21, 2024] <a href="https://blog.fai-project.org/posts/25-years-of-fai/">Happy 25th birthday FAI!</a></li>
 <li>[Aug, 17, 2024] The FAIme web service now supports Debian live
   images, <a href="https://debconf24.debconf.org/talks/136-a-web-service-for-building-your-own-customized-debian-live-image/">presentation</a>
