new distributions, new logos

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ and <a href="/fai-cd/">new ISO images</a> available using FAI 6.4</li>
             <ul>
               <li>
                 <span class="valign-wrapper">
-                  <i class="material-icons">done</i>&nbsp;<span>Installs Debian, Ubuntu, Rocky Linux, CentOS, RHEL, SUSE, ...</span></span>
+                  <i class="material-icons">done</i>&nbsp;<span>Installs Debian, Ubuntu, Rocky Linux, AlmaLinux, Linux Mint, RHEL, SUSE, ...</span></span>
               </li>
               <li>
                 <span class="valign-wrapper">
@@ -125,7 +125,7 @@ and <a href="/fai-cd/">new ISO images</a> available using FAI 6.4</li>
 
           <div class="col m4 hide-on-small-only">
 
-            <img class="valign responsive-img" src="pics/dist-logos.png" alt="">
+            <img class="valign responsive-img" src="pics/dist-logos2.png" alt="">
 
           </div>
         </div>
