--- a/FAIme/cloud/index.html
+++ b/FAIme/cloud/index.html
@@ -117,7 +117,8 @@
             <p>
             Start this disk image with: <code> kvm -m 2G -hda imagename</code>
             <p>
-	    <b>Any feedback is welcome. Send an email to FAI.me =at= fai-project.org</b>
+              All detailed logs file can be found inside the VM in <code>/var/log/fai/localhost/last/</code>
+	    </br> <b>Any feedback is welcome. Send an email to FAI.me =at= fai-project.org</b>
 	  </div>
 	</div>
 
