stop bullseye support for cloud images, add trixie support

--- a/FAIme/index.html
+++ b/FAIme/index.html
@@ -109,7 +109,7 @@
 	    </div>
 
             <!--#include virtual="language.html" -->
-            <!--#include virtual="key-distr-desk-pkgs2.html" -->
+            <!--#include virtual="key-distr-desk-pkgs.html" -->
 
 	    <div id="adv3" style="display: none;">
 
