--- a/FAIme/key-distr-desk-pkgs.html
+++ b/FAIme/key-distr-desk-pkgs.html
@@ -6,9 +6,9 @@
 	      <div class="col s12 m6">
 		<div class="input-field">
 		  <select class="browser-default" name="suite">
-		    <option value="bullseye">Debian 11 Bullseye (oldstable)
-		    </option>
 		    <option value="bookworm" selected="selected">Debian 12 Bookworm (stable)
+		    </option>
+		    <option value="trixie">Debian 13 Trixie (testing)
 		    </option>
 		  </select>
 		</div>
