fix html errors

--- a/FAIme-ubuntu/index.html
+++ b/FAIme-ubuntu/index.html
@@ -40,7 +40,7 @@
 	<div class="row">
 	  <div class="col s12">
 	    <h5 style="text-align: center; line-height: 200%">
-	      FAI.me. Build your own </br> <b>Installation ISO for Ubuntu 24.04</b>
+	      FAI.me. Build your own <br> <b>Installation ISO for Ubuntu 24.04</b>
             <!--#include virtual="bug.html" -->
 
 	      <!--#include virtual="select-menu.html" -->
