--- a/FAIme/cloud/index.html
+++ b/FAIme/cloud/index.html
@@ -40,7 +40,7 @@
 	<div class="row">
 	  <div class="col s12">
 	    <h5 style="text-align: center; line-height: 200%">
-	      FAI.me. Build your own </br> <b>Debian Cloud Image</b>
+	      FAI.me. Build your own <br> <b>Debian Cloud Image</b>
 
               <!--#include virtual="bug.html" -->
               <!--#include virtual="../select-menu.html" -->
@@ -118,7 +118,7 @@
             Start this disk image with: <code> kvm -m 2G -hda imagename</code>
             <p>
               All detailed logs file can be found inside the VM in <code>/var/log/fai/localhost/last/</code>
-	    </br> <b>Any feedback is welcome. Send an email to FAI.me =at= fai-project.org</b>
+	    <br> <b>Any feedback is welcome. Send an email to FAI.me =at= fai-project.org</b>
 	  </div>
 	</div>
 
