--- a/FAIme/select-menu.html
+++ b/FAIme/select-menu.html
@@ -1,8 +1,8 @@
 	    </h5>
-              <ul style="font-size: 120%" class="browser-default"><b>
+              <div style="font-size: 120%;font-weight: bold" class="browser-default">
                 <a class="fai-btn btn-small " style="border-radius: 15px;font-size: 95%" href="/FAIme/">Debian install images</a>
                 <a class="fai-btn btn-small " style="border-radius: 15px;font-size: 95%" href="/FAIme/live">Debian live images</a>
                 <a class="fai-btn btn-small " style="border-radius: 15px;font-size: 95%" href="/FAIme/cloud">Debian cloud images</a>
                 <a class="fai-btn btn-small " style="border-radius: 15px;font-size: 95%" href="/FAIme-ubuntu">Ubuntu install images</a>
-                </b>
-              </ul>
+              </div>
+<p>
