--- a/FAIme/index.html
+++ b/FAIme/index.html
@@ -39,9 +39,8 @@
 	<!-- Top text -->
 	<div class="row">
 	  <div class="col s12">
-	    <h5>
 	    <h5 style="text-align: center; line-height: 200%">
-	      FAI.me. Build your own </br>  <b>Installation ISO for Debian</b>
+	      FAI.me. Build your own <br>  <b>Installation ISO for Debian</b>
             <!--#include virtual="bug.html" -->
 
             <!--#include virtual="select-menu.html" -->
