fix html syntax

--- a/FAIme-ubuntu/key-distr-desk-pkgs.html
+++ b/FAIme-ubuntu/key-distr-desk-pkgs.html
@@ -37,11 +37,11 @@
 	      </p>
 	      <ul class="col s12 m6">
 		<li>
-                 <input type="checkbox" class="fai" id="cl2" name="cl2" value="DEBIAN_DEVEL"/>
+                 <input type="checkbox" class="fai" id="cl2" name="cl2" value="DEBIAN_DEVEL">
                   <label for="cl2">Debian developer tools</label>
 		</li>
 		<li>
-                 <input type="checkbox" class="fai" id="cl3" name="cl3" value="WEBSERVER"/>
+                 <input type="checkbox" class="fai" id="cl3" name="cl3" value="WEBSERVER">
                   <label for="cl3">Web server</label>
 		</li>
                 <!--
@@ -53,11 +53,11 @@
 		    </li>
                     -->
 		<li>
-		    <input type="checkbox" class="fai" id="cl5" name="cl5" value="SSH_SERVER" checked="checked"/>
+		    <input type="checkbox" class="fai" id="cl5" name="cl5" value="SSH_SERVER" checked="checked">
                   <label for="cl5">Openssh server</label>
 		</li>
 		<li>
-		    <input type="checkbox" class="fai" id="cl6" name="cl6" value="STANDARD" checked="checked"/>
+		    <input type="checkbox" class="fai" id="cl6" name="cl6" value="STANDARD" checked="checked">
 		    <label for="cl6">Standard system tools</label>
 		</li>
 	      </ul>
@@ -76,7 +76,7 @@
                 <br> <br>
 	      </p>
 	      <div class="col s12 m6">
-		  <input type="checkbox" class="fai" id="cl9" name="cl9" value="RECOMMENDS"/>
+		  <input type="checkbox" class="fai" id="cl9" name="cl9" value="RECOMMENDS">
 		  <label for="cl9" class="helper-text">Enable recommended packages for your custom package list</label>
               </div>
 	    </div>
