--- a/FAIme-ubuntu/service.html
+++ b/FAIme-ubuntu/service.html
@@ -6,17 +6,13 @@
     <link type="text/css" rel="stylesheet" href="/css/sidenav-compact.css" media="screen">
     <link type="text/css" rel="stylesheet" href="/css/local.css" media="screen">
 
+    <link type="text/css" rel="stylesheet" href="../FAIme/css/service-styling.css">
+
     <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
 
     <link rel="icon" href="/pics/favicon.ico" type="image/x-icon">
     <meta charset="UTF-8"/>
     <title>FAI.me - build your own custom ISO</title>
-    <style>
-      .input-field {
-	  margin-top: 0;
-      }
-    </style>
-  </head>
 
   <body>
     <header>
