Relocated JS and CSS files and changed paths where necessary.

--- a/FAIme-ubuntu/service.html
+++ b/FAIme-ubuntu/service.html
@@ -6,7 +6,7 @@
     <link type="text/css" rel="stylesheet" href="/css/sidenav-compact.css" media="screen">
     <link type="text/css" rel="stylesheet" href="/css/local.css" media="screen">
 
-    <link type="text/css" rel="stylesheet" href="../FAIme/css/service-styling.css">
+    <link type="text/css" rel="stylesheet" href="../css/service-styling.css">
 
     <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
 
