Made usrname adjustable for user_name_pw via JS.

--- a/FAIme/user_name_pw.html
+++ b/FAIme/user_name_pw.html
@@ -4,7 +4,7 @@
 		Username (Not the full name)
 	      </p>
 	      <div class="input-field col s12 m6">
-		<input id="user" name="username" type="text" value="debian" required="required">
+		<input id="user" name="username" type="text" value="" required="required">
 	      </div>
 
 	    </div>
@@ -19,3 +19,5 @@
 		<span class="helper-text">If not set, a password will be generated</span>
 	      </div>
 	    </div>
+
+		<script src="js/username-pw-conf.js"></script>
