--- a/FAIme/index.html
+++ b/FAIme/index.html
@@ -64,12 +64,7 @@
 		  Disk partitioning scheme
 		</p>
 		<div class="col s12 m6 input-field">
-		  <select class="browser-default" name="partition">
-		    <option value="ONE">One partition</option>
-		    <option value="ONE_LVM">One partition using LVM</option>
-		    <option value="HOME">Partition for /home</option>
-		    <option value="HOME_LVM">Partition for /home using LVM</option>
-		  </select>
+		  <select class="browser-default" name="partition" id="partition"></select>
 		</div>
 	      </div>
 
@@ -149,22 +144,6 @@
     <script>
       M.AutoInit();
     </script>
-    <script>
-    <!--
-      function toggle_visibility(id) {
-	  var e = document.getElementById(id);
-	  if (e.style.display == 'none')
-	      e.style.display = 'inline';
-	  else
-	      e.style.display = 'none';
-      }
-
-      function toggle_all() {
-          toggle_visibility('adv');
-          toggle_visibility('adv2');
-          toggle_visibility('adv3');
-      }
-      //-->
-    </script>
+	<script src="../js/index-conf.js"></script>
   </body>
 </html>
