--- a/reports/index.html
+++ b/reports/index.html
@@ -34,6 +34,40 @@ Currently we have more than 350 detailed reports. Please also fill out the <a hr
 <hr>
 <div>
 
+<b>From:</b> Peter Pütz, ppuetz XATXprotonmail.com
+<br><b>Date:</b> Thu, 19 Jun 2025 10:32:02 +0000
+<pre>
+Are you using the FAI.me build service? Yes!
+How many hosts have you installed using fai? <b>A couple hundred</b> (lost count honestly)
+Which version of fai are you using? <b>6.4.x</b>
+Which version are you using as your install kernel? plain Debian kernel
+
+Which types of hosts are you installing with fai? mostly web servers
+
+How do you boot your hosts?
+ via network (PXE, DHCP): Yes, using the autodiscover feature for local test machines
+            using FAI-CD: Yes, to install cloud instances
+
+Does the default install kernel recognize all your hardware? Yes!
+Which drivers are missing? None.
+
+Do you manage your configuration space under version control? Yes, via git.
+What types of scripts are you using for local customization?  shell
+
+<b>What is the business of your company/organisation?</b> Private use.
+<br><b>Additional comments:</b>
+My former employer used FAI extensively to install both bare-metal and virtual machines.
+
+Today I use it for private projects only. Regardless of the use case (enterprise or private use) I appreciate the fact
+that FAI keeps things simple. Customizing installations is really easy once you get the hang of the class concept and
+scales really well. I also tend to shift more and more responsibilities from Ansible to FAI when it comes to configuring
+a sane baseline (e.g. hardening) for all machines, since using FAI is usually more straightforward.  I also use the
+FAI.me service sporadically, mostly because I was curious. I think its a great tool to get started quickly and in an
+ad-hoc manner, when managing your own config space is not feasible or your config space is simply not available. In fact
+I learned from a colleague by pure chance that they use FAI.me as well for personal use.
+</pre> <HR>
+
+
 <b>From:</b> memorysolution
 <br><b>Date:</b> Wed, 11 Sep 2024 09:37:47 +0000
 <pre>
