Fixed wrong path for referincing JS file in user_name_pw page.

--- a/FAIme/user_name_pw.html
+++ b/FAIme/user_name_pw.html
@@ -20,4 +20,4 @@
 	      </div>
 	    </div>
 
-		<script src="js/username-pw-conf.js"></script>
+		<script src="../js/username-pw-conf.js"></script>
