--- a/FAIme/key-distr-desk-pkgs.html
+++ b/FAIme/key-distr-desk-pkgs.html
@@ -27,7 +27,7 @@
               <br>
 	      <div class="col s12 m6 input-field">
 		<select class="browser-default" name="desktop">
-		  <option value="">Plain text console, no X11</option>
+		  <option value="">Plain text console, no Xorg desktop</option>
 		  <option value="XFCE">XFCE desktop</option>
 		  <option value="LXDE">LXDE desktop</option>
 		  <option value="LXQT">LXQT desktop</option>
